- Amended .gitignore to exclude TypeScript build outputs - Amended .gitattributes to direct linguist to classify puppeteer.web.js as a vendored file

--- a/.gitattributes
+++ b/.gitattributes
@@ -61,3 +61,10 @@
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
+
+###############################################################################
+# Get linguist-library to identify TypeScript files correctly
+###############################################################################
+#*.ts linguist-language=TypeScript
+Puppeteer/* linguist-vendored
+puppeteer-web.js linguist-vendored=true
